--- a/index.html
+++ b/index.html
@@ -24,6 +24,27 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <div class="setting">
+        <div class="setting">
+          <label for="length">password length</label>
+          <input type="number" id="length" min="8" max="128"/>
+        </div>
+        <div class="setting">
+          <label for ="uppercase">include upper case letters</label>
+          <input type="checkbox" id="uppercase" class="option"/>
+        </div>
+        <div class="setting">
+          <label for ="lowercase">include lower case letters</label>
+          <input type="checkbox" id="lowercase"/>
+        </div>
+        <div class="setting">
+          <label for ="numbers">include numbebers</label>
+          <input type="checkbox" id="numbers"/>
+        </div>
+        <div class="setting">
+          <label for ="sysmbols">include sysmbols</label>
+          <input type="checkbox" id="symbols"/>
+        </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
         </div>
